Archive2/64/d520eb76f818c7/output
main.cpp:8:29: error: 'gibe_f()' is not a valid template argument for type 'void (*)()'
 using lol = carrier<gibe_f()>;
                             ^
main.cpp:8:29: error: it must be the address of a function with external linkage
